# Lemonade

./: CMakeLists.txt
CMake/: FindVala.cmake
commands/cmake/: cmake.vala
commands/graph/: CMakeLists.txt  graph.vala
drivers/: CMakeLists.txt
drivers/archive/: CMakeLists.txt  archive.c  downloader.vala  extract.vala
drivers/archive/vapi/: libarchive.vapi
drivers/git/: CMakeLists.txt  git.c
drivers/msi/: CMakeLists.txt  msi.c
drivers/packagekit/: CMakeLists.txt  packagekit.c  pk_driver.vala
drivers/packagekit/vapi/: karrot.vapi
drivers/subversion/: CMakeLists.txt  subversion.c
src/: CMakeLists.txt  archive.vala  cmake.vala  downloader.vala  driver.hpp  driver.vala  git.vala  library.hpp  main.cpp  main.vala  msi.c  msi.vapi  packagekit.vala  patch.vala  progress.vala  subversion.c  subversion.vapi
vapi/: karrot.vapi  libgit2.vapi
